Fixed mainContent styles; added section headers to posts; fixed post alignment; added post block quotes

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,8 +23,8 @@ $computer		: 12;
 $header1		: 3.125em;
 $header2		: 4.375em;
 
-$background-color: #019875;
-$background-compliment: rgba(228, 142, 140, 0.5);
+$background-color: #019875; /*#f5cc3f;*/
+	$background-compliment: #f5cc3f;
 $font-color		: #333;
 
 $serif-fonts	: Georgia, "Times New Roman", Times, serif;
@@ -34,6 +34,10 @@ $music-tote		: #8186d5;
 $movie-tote		: #85bdc1;
 $food-tote		: #e1e297;
 $event-tote		: #d66B96;
+
+a {
+	outline: none;
+}
 
 @mixin caviar-regular {
 	/* Generated by Font Squirrel (http://www.fontsquirrel.com) on January 13, 2013 05:14:26 PM America/New_York */
